--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
       "last 1 safari version"
     ]
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!react-dnd|react-dnd-html5-backend)/"
+    ]
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
