--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "types": ["msw"],
     "target": "es5",
     "lib": [
       "dom",
@@ -14,7 +13,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "CommonJS",
+    "module": "esnext", 
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
